# MS_Intersection

./: Atom_sphere.cpp  Atom_sphere.h  CMakeLists.txt  Jenkins_Traub.cpp  Jenkins_Traub.h  Makefile  Matrix44.cpp  Matrix44.h  README.md  SparseMatrix.h  Torus.cpp  Torus.h  VanderWaals_surface.h  Vector2d.cpp  Vector2d.h  concave_edge.cpp  concave_edge.h  concave_sphere.cpp  concave_sphere.h  convex_edge.cpp  convex_edge.h  convex_face.h  grid_edge.cpp  grid_edge.h  grid_point.cpp  grid_point.h  main.cpp  molecular_surface.h  saddle_face.cpp  saddle_face.h  types.h
